WIP - fixes + generic nested fields instead of CSQ specific